force-app/main/default/objects/Pipeline__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>this pipeline is used by CES</description>
    <inlineHelpText>this pipeline is used by CES</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>