force-app/main/default/objects/Pipeline__c/fields/Fuel_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Percentage__c</fullName>
    <label>Fuel Percentage</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>