force-app/main/default/objects/Pipeline__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <externalId>true</externalId>
    <label>Long Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>