force-app/main/default/objects/Pipeline__c/fields/MPLS_ID__c.field-meta.xml
<CustomField>
    <fullName>MPLS_ID__c</fullName>
    <externalId>true</externalId>
    <label>MPLS ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>