force-app/main/default/objects/Pipeline__c/fields/Pipeline_Code__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Code__c</fullName>
    <externalId>true</externalId>
    <label>Pipeline Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>