force-app/main/default/objects/Pipeline__c/fields/Region_Required__c.field-meta.xml
<CustomField>
    <fullName>Region_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>region required for this pipeline</inlineHelpText>
    <label>Region Required</label>
    <type>Checkbox</type>
</CustomField>