force-app/main/default/objects/Pipeline__c/fields/STL_ID__c.field-meta.xml
<CustomField>
    <fullName>STL_ID__c</fullName>
    <externalId>true</externalId>
    <label>STL ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>