force-app/main/default/objects/Pipeline__c/fields/Transport_Contact__c.field-meta.xml
<CustomField>
    <fullName>Transport_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Pipeline_Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <infoMessage>Filter is required for desired results.  DO NOT REMOVE.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>