force-app/main/default/objects/Pipeline__c/listViews/All_Pipelines.listView-meta.xml
<ListView>
    <fullName>All_Pipelines</fullName>
    <columns>NAME</columns>
    <columns>Fuel_Percentage__c</columns>
    <columns>Summer_Swing__c</columns>
    <columns>Winter_Swing__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Pipeline_Code__c</columns>
    <columns>Long_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pipelines</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>